hphp/hack/test/typecheck/argument_unpacking/unpack_call6.php.exp
File "unpack_call6.php", line 12, characters 13-17:
Expected Traversable<[unresolved]> (it is unpacked with '...') (Typing[4110])
File "unpack_call6.php", line 11, characters 11-18:
But got string
